This is just to motivate myself to improve a little bit every day :)

Best: 20

12-04-2024
Streak: 20
Learned:
Did:
    - Fix, clean up and test Calendar ViewModel and Repository
        but still need to remove CalendarFragment

11-04-2024
Streak: 19
Learned:
Did:
    - Rework getTodayWithOffset to be more configurable, change name as 'today with offset'
        sounds more confusing than clearly pointing out it is a wacky situational implementation.
    - Work on CalendarComponent (VM, Repo, Fragment) to implement coroutine that only checks if
        day has been updated when it needs to. (Messy WIP)

10-04-2024
Streak: 18
Learned:
    - Workshop on coroutines
Did:
    - Hacky implementation that temporarily uses CalendarFragment as a UI component
        (needs to change) as title for main menu
    - Start implementing a way to observe a change of date whilst app is running, using coroutines

09-04-2024
Streak: 17
Learned:
Did:
    -Add a reusable 'OutlinedText' component, to display readable text against any background
    -Revert overzealous auto-refactor ->
        'kotlin.code.style' setting had been renamed 'kotlin.code.ui.style' when style dir was
        placed in a directory named ui.

08-04-2024
Streak: 16
Learned:
Did:
    -Add standard padding definitions for different screen sizes

07-04-2024
Streak: 15
Learned:
Did:
    -Split colours from theme into separate file + function
    -Make colours providable to other composables in the tree using CompositionLocalProvider
    -Make MainMenuSub component, to hold different sub menus that are displayable on the main menu
    -Add transparency to ImageButton component, make the day part menu buttons slightly transparent
    -Remove hardcoded string, allow title of SubMenu now to be passed as param

06-04-2024
Streak: 14
Learned:
    -Read about using CompositionLocal (again) - this time in the context of passing theme colours.
Did: