@@ -10,4 +10,8 @@
     <string name="day">Dag</string>
     <string name="evening">Avond</string>
     <string name="daily_rituals">Dagelijkse Rituelen</string>
+    <string name="mid_spring">Lente Equinox</string>
+    <string name="mid_summer">Zomerwende (Midzomer)</string>
+    <string name="mid_autumn">Herfst Equinox</string>
+    <string name="mid_winter">Winterwende (Midwinter)</string>
 </resources>
